header font sizes fix on mobile devices - change for breakpoints

--- a/themes/tieto_admin/src/sass/paragraphs/header.scss
+++ b/themes/tieto_admin/src/sass/paragraphs/header.scss
@@ -69,7 +69,7 @@ $paragraph-header-overlay-bg: rgba(103, 175, 225, .5); // @todo move to variable
         display: inline-block;
         font-weight: 800;
         letter-spacing: -2px;
-        @media (max-width: 766px) {
+        @include breakpoint-max(md) {
             font-size: 2.8em;
         }
     }
@@ -78,7 +78,7 @@ $paragraph-header-overlay-bg: rgba(103, 175, 225, .5); // @todo move to variable
     .field--name-field-lead-text {
         font-size: 1.5em;
         margin-bottom: .5em;
-        @media (max-width: 766px) {
+        @include breakpoint-max(md) {
             font-size: 1.2em;
         }
     }
